Аdded record and play functions

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     </select>
                 </div>
                 <input type="button" id="record" value="Record" class="mainButton">
-                <input type="button" id="play" value="Play" class="mainButton">
+                <input type="button" id="play" value="Play" class="mainButton" style="background-color: #FF8C00;">
             </div>
             <div class="keys">
                 <input id="A" type="button" value="A" class="key">
@@ -31,8 +31,9 @@
     </body>
 
     <script src="https://cdn.jsdelivr.net/npm/@magenta/music@^1.0.0"></script>
-    <script src="drums.js"></script>
-    <script src="twinkles.js"></script>
-    <script src="dingdongs.js"></script>
-    <script src="index.js"></script>
+    <script src="./instrumentals/drums.js"></script>
+    <script src="./instrumentals/twinkles.js"></script>
+    <script src="./instrumentals/dingdongs.js"></script>
+    <script src="./src/helper.js"></script>
+    <script src="./src/index.js"></script>
 </html>
